--- a/style.css
+++ b/style.css
@@ -4,8 +4,20 @@
     border: 1px solid;
     box-shadow: 5px 5px 2px black;
 }
-p{
+#kezdo{
   letter-spacing: 1px;
   text-indent: 5px;
 
+}
+#megjegyzes{
+    font-style: italic;
+    font-size: small;
+}
+hr{
+    display: block;
+    width: 80%;
+    margin-left: auto;
+    margin-right: auto;
+    border: 3px solid black;
+    border-radius: 4px;
 }
