--- a/style.css
+++ b/style.css
@@ -8,7 +8,9 @@
 #kezdo{
   letter-spacing: 1px;
   text-indent: 5px;
-
+  width: 70%;
+  margin-left: auto;
+  margin-right: auto;
 }
 #megjegyzes{
     font-style: italic;
@@ -32,4 +34,20 @@ figcaption{
     color: #db814c;
     font-style: italic;
     font-weight: bold;
+}
+.navbar{
+    background-color: #0F2C59;
+}
+body{
+    background-color: #EADBC8;
+}
+footer{
+    background-color: #0F2C59;
+    height: 50px;
+    text-align: center;
+    color: white;
+}
+a{
+    text-decoration: none;
+    color: bisque;
 }
